Comment for out of disk space error.